--- a/index.html
+++ b/index.html
@@ -1,28 +1,38 @@
 <html>
 <head>
-  <script src='index.js'></script>
+  <script src='app.js'></script>
+  <style>
+    body  {background-color: powderblue;}
+    table {border-collapse: collapse; width: 600px; height: 600px}
+    td    {border: 1px solid black;
+           text-align:center;
+           font-weight:bold;
+           padding:0px;
+           width: 200px;
+           height: 200px;}
+  </style>
 </head>
 </head>
 <body>
   <table>
     <thead>
-      <h1> TIc Tac Toe</h1>
+      <h1> Tic Tac Toe</h1>
     </thead>
     <tbody>
-      <tr id='row_one'>
-        <td id='1,1'></td>
-        <td id='1,2'></td>
-        <td id='1,3'></td>              
+      <tr id='y1'>
+        <td id='1x1' onclick=playerMove(1,1)></td>
+        <td id='2x1' onclick=playerMove(2,1)></td>
+        <td id='3x1' onclick=playerMove(3,1)></td>              
       </tr>
-      <tr id ='row_two'>
-        <td id='2,1'></td>
-        <td id='2,2'></td>
-        <td id='2,3'></td>
+      <tr id ='y2'>
+        <td id='1x2' onclick=playerMove(1,2)></td>
+        <td id='2x2' onclick=playerMove(2,2)></td>
+        <td id='3x2' onclick=playerMove(3,2)></td>
       </tr>
-      <tr id='row_three'>
-        <td id='3,1'></td>
-        <td id='3,2'></td>
-        <td id='3,3'></td> 
+      <tr>
+        <td id='1x3' onclick=playerMove(1,3)></td>
+        <td id='2x3' onclick=playerMove(2,3)></td>
+        <td id='3x3' onclick=playerMove(3,3)></td> 
       </tr>
     </tbody>
   </table>
