--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
 </head>
 </head>
 <body>
+    <h1 id='title'> This is Tic Tac Toe</h1>
   <table>
-    <thead>
-      <h1> Tic Tac Toe</h1>
-    </thead>
     <tbody>
       <tr id='y1'>
         <td id='1x1' onclick=playerMove(1,1)></td>
