--- a/index.html
+++ b/index.html
@@ -2,30 +2,46 @@
 <head>
   <script src='app.js'></script>
   <style>
-    body  {background-color: powderblue;}
-    table {border-collapse: collapse; width: 600px; height: 600px}
-    td    {border: 1px solid black;
-           text-align:center;
-           font-weight:bold;
-           padding:0px;
-           width: 200px;
-           height: 200px;}
+    body {
+      background-color: powderblue;
+      text-align: center;}
+    table {
+      border-collapse: collapse; 
+      width: 600px; 
+      height: 600px;
+      text-align: auto;}
+    tbody {text-align: center;}
+    td {
+      vertical-align: middle;
+      text-align: auto;
+      margin-left: auto;
+      margin-right: auto;
+      border: 1px solid black;
+      font-weight:bold;
+      font-size: 50px;
+      padding: 0px;
+      width: 200px;
+      height: 200px;}
+    .center {
+      vertical-align: auto;
+      margin-left:auto; 
+      margin-right:auto;}
   </style>
 </head>
 </head>
 <body>
     <h1 id='title'> This is Tic Tac Toe</h1>
-  <table>
+  <table class='center'>
     <tbody>
       <tr id='y1'>
-        <td id='1x1' onclick=playerMove(1,1)></td>
-        <td id='2x1' onclick=playerMove(2,1)></td>
-        <td id='3x1' onclick=playerMove(3,1)></td>              
+        <td class='center' id='1x1' onclick=playerMove(1,1)></td class='center'>
+        <td class='center' id='2x1' onclick=playerMove(2,1)></td class='center'>
+        <td class='center' id='3x1' onclick=playerMove(3,1)></td class='center'>              
       </tr>
       <tr id ='y2'>
-        <td id='1x2' onclick=playerMove(1,2)></td>
-        <td id='2x2' onclick=playerMove(2,2)></td>
-        <td id='3x2' onclick=playerMove(3,2)></td>
+        <td class='center' id='1x2' onclick=playerMove(1,2)></td>
+        <td class='center' id='2x2' onclick=playerMove(2,2)></td class='center'>
+        <td class='center' id='3x2' onclick=playerMove(3,2)></td class='center'>
       </tr>
       <tr>
         <td id='1x3' onclick=playerMove(1,3)></td>
