--- a/index.html
+++ b/index.html
@@ -4,28 +4,39 @@
   <style>
     body {
       background-color: powderblue;
-      text-align: center;}
+      text-align: center;
+    }
     table {
-      border-collapse: collapse; 
-      width: 600px; 
-      height: 600px;
-      text-align: auto;}
-    tbody {text-align: center;}
+      margin: 5% 0;
+      border: 3px solid black;
+      width: 80%;
+      height: 80%;
+      border-collapse: collapse;
+      text-align: center;
+    }
+    tr {
+      border: 3px solid black;
+      width: 100%;
+      height: 33%;
+      min-height:50px;
+      text-align: center;
+    }
     td {
-      vertical-align: middle;
-      text-align: auto;
-      margin-left: auto;
-      margin-right: auto;
-      border: 1px solid black;
-      font-weight:bold;
-      font-size: 50px;
-      padding: 0px;
+      border-collapse: collapse;
+      border: 3px solid black;
       width: 200px;
-      height: 200px;}
+      height: 200px;
+      min-height: 100px;
+      min-width: 100px;
+      vertical-align: middle;
+      text-align: center;
+      font-size: 20px;
+    }    
     .center {
       vertical-align: auto;
       margin-left:auto; 
-      margin-right:auto;}
+      margin-right:auto;
+    }
   </style>
 </head>
 </head>
@@ -34,14 +45,14 @@
   <table class='center'>
     <tbody>
       <tr id='y1'>
-        <td class='center' id='1x1' onclick=playerMove(1,1)></td class='center'>
-        <td class='center' id='2x1' onclick=playerMove(2,1)></td class='center'>
-        <td class='center' id='3x1' onclick=playerMove(3,1)></td class='center'>              
+        <td id='1x1' onclick=playerMove(1,1)></td class='center'>
+        <td id='2x1' onclick=playerMove(2,1)></td class='center'>
+        <td id='3x1' onclick=playerMove(3,1)></td class='center'>              
       </tr>
       <tr id ='y2'>
-        <td class='center' id='1x2' onclick=playerMove(1,2)></td>
-        <td class='center' id='2x2' onclick=playerMove(2,2)></td class='center'>
-        <td class='center' id='3x2' onclick=playerMove(3,2)></td class='center'>
+        <td id='1x2' onclick=playerMove(1,2)></td>
+        <td id='2x2' onclick=playerMove(2,2)></td class='center'>
+        <td id='3x2' onclick=playerMove(3,2)></td class='center'>
       </tr>
       <tr>
         <td id='1x3' onclick=playerMove(1,3)></td>
